k8s/ingress-simple.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ikuchio-simple-ingress
  namespace: ikuchio-cup-2025
spec:
  ingressClassName: "gce"
  rules:
  - host: krz-tech.net
    http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: ikuchio-frontend-service
            port:
              number: 80
  - host: api-ikuchio-cup-2025.krz-tech.net
    http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: ikuchio-backend-service
            port:
              number: 8000
